--- a/renderer/admin.html
+++ b/renderer/admin.html
@@ -3,28 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>POrpt - Admin Usuarios</title>
+  <title>POrpt - Administración</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-light">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <a class="navbar-brand" href="dashboard.html">POrpt</a>
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="#" onclick="logout()">Logout</a>
+      <a class="navbar-brand fw-bold" href="dashboard.html">POrpt</a>
+      <div class="d-flex gap-2">
+        <button class="btn btn-outline-light" onclick="logout()">Cerrar sesión</button>
       </div>
     </div>
   </nav>
-  <div class="container mt-4">
-    <h2>Gestión de Usuarios</h2>
-    <button onclick="loadUsers()" class="btn btn-primary mb-3">Cargar Usuarios</button>
-    <table id="usersTable" class="table table-striped">
-      <thead><tr><th>ID</th><th>Usuario</th><th>Nombre</th><th>Empresas</th><th>Acciones</th></tr></thead>
-      <tbody></tbody>
-    </table>
-    <div id="alerts" class="position-fixed top-0 end-0 p-3" style="z-index: 11"></div>
-  </div>
+
+  <main class="container my-4">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <div>
+        <h2 class="fw-semibold">Gestión de usuarios</h2>
+        <p class="text-muted mb-0">Crea, modifica y elimina usuarios autorizados para acceder a POrpt.</p>
+      </div>
+      <button id="loadUsersBtn" class="btn btn-primary">Actualizar listado</button>
+    </div>
+    <div class="table-responsive">
+      <table id="usersTable" class="table table-striped align-middle">
+        <thead class="table-dark">
+          <tr>
+            <th>ID</th>
+            <th>Usuario</th>
+            <th>Nombre</th>
+            <th>Empresas</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+    <p class="small text-muted">Tip: Usa el botón “Editar” para actualizar nombre, empresas o contraseña. El administrador tiene acceso a todas las empresas.</p>
+  </main>
+
+  <div id="alerts" class="toast-container position-fixed top-0 end-0 p-3"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="renderer.js"></script>
 </body>
