--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,28 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>POrpt - Login</title>
+  <title>POrpt - Inicio de sesión</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-light">
-  <div class="container mt-5">
+<body class="bg-gradient">
+  <div class="container py-5">
     <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-header text-center">
-            <h3>POrpt Login</h3>
+      <div class="col-md-6 col-lg-5">
+        <div class="card shadow-lg border-0">
+          <div class="card-header text-center bg-dark text-white">
+            <h3 class="mb-0">POrpt</h3>
+            <small>Control inteligente de Pedidos, Remisiones y Facturas</small>
           </div>
           <div class="card-body">
-            <input id="username" placeholder="Usuario (admin)" class="form-control mb-2">
-            <input id="password" type="password" placeholder="Contraseña" class="form-control mb-2">
-            <button onclick="login()" class="btn btn-primary w-100">Iniciar Sesión</button>
+            <form id="loginForm" class="needs-validation" novalidate>
+              <div class="mb-3">
+                <label for="username" class="form-label">Usuario</label>
+                <input id="username" type="text" class="form-control" placeholder="admin" required>
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input id="password" type="password" class="form-control" placeholder="569OpEGvwh'8" required>
+              </div>
+              <div class="d-grid gap-2">
+                <button id="loginButton" type="submit" class="btn btn-primary">Iniciar sesión</button>
+              </div>
+            </form>
+            <div class="mt-3 small text-muted">
+              <p class="mb-1">• El usuario administrador puede crear, editar y eliminar usuarios.</p>
+              <p class="mb-0">• Después de iniciar sesión selecciona empresa y PO para ver el dashboard interactivo.</p>
+            </div>
           </div>
         </div>
-        <div id="alerts" class="position-fixed top-0 end-0 p-3" style="z-index: 11"></div>
       </div>
     </div>
   </div>
+  <div id="alerts" class="toast-container position-fixed top-0 end-0 p-3"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="renderer.js"></script>
 </body>
