--- a/renderer/index.html
+++ b/renderer/index.html
@@ -14,16 +14,19 @@
         <div class="card shadow-lg border-0">
           <div class="card-header text-center bg-dark text-white">
             <h3 class="mb-0">POrpt</h3>
+            <p class="mb-0 small text-white-50">Panel de reportes y consumo de pedidos</p>
           </div>
           <div class="card-body">
             <form id="loginForm" class="needs-validation" novalidate>
               <div class="mb-3">
                 <label for="username" class="form-label">Usuario</label>
-                <input id="username" type="text" class="form-control" placeholder="admin" required>
+                <input id="username" type="text" class="form-control" placeholder="Usuario" required>
+                <div class="invalid-feedback">Escribe tu usuario para continuar.</div>
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input id="password" type="password" class="form-control" placeholder="569OpEGvwh'8" required>
+                <input id="password" type="password" class="form-control" required>
+                <div class="invalid-feedback">La contraseña es obligatoria.</div>
               </div>
               <div class="d-grid gap-2">
                 <button id="loginButton" type="submit" class="btn btn-primary">Iniciar sesión</button>
