--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -36,6 +36,16 @@
           <datalist id="poOptions"></datalist>
           <div class="form-text">Cada coincidencia muestra número, fecha y monto para distinguir fácilmente.</div>
         </div>
+        <div class="col-12">
+          <label class="form-label">POs seleccionadas para el dashboard y el reporte</label>
+          <div id="selectedPoContainer" class="selected-po-container">
+            <p class="text-muted small mb-0">No hay POs seleccionadas. Utiliza el buscador para agregarlas.</p>
+          </div>
+          <div class="d-flex flex-wrap align-items-center gap-2 mt-2">
+            <button id="clearSelectionBtn" class="btn btn-outline-secondary btn-sm" type="button">Limpiar selección</button>
+            <small id="selectedPoHelp" class="text-muted">Puedes agregar varias POs base (el sistema combinará sus extensiones automáticamente).</small>
+          </div>
+        </div>
       </div>
       <div class="mt-3 d-flex flex-wrap align-items-center gap-2">
         <div class="dropdown">
@@ -46,7 +56,7 @@
         </div>
         <button id="generateReportBtn" class="btn btn-success">Descargar reporte</button>
         <span id="reportEngineStatus" class="badge text-bg-secondary d-none"></span>
-        <small id="reportEngineHelp" class="text-muted d-block">El reporte incluirá gráficas, totales y alertas del PO seleccionado.</small>
+        <small id="reportEngineHelp" class="text-muted d-block">El reporte incluirá gráficas, totales y alertas de todas las POs seleccionadas.</small>
       </div>
     </section>
 
